syntax = "proto3";

package utility;

option go_package = "github.com/werbot/werbot/internal/grpc/proto/utility";

import "tagger/tagger.proto";

service UtilityHandlers {
    rpc GetCountry(GetCountry.Request) returns (GetCountry.Response) {}
}

// rpc GetInfo
message GetCountry {
    message Request {
        string name = 1 [(tagger.tags) = "validate:\"required,min=2\""];
    }

    message Response {
        message Country {
            string code = 1;
            string name = 2;
        }
        repeated Country countries = 1;
    }
}
// -----------------------------------------------------